# esp32-rlcd-apps

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  README_zh.md  partitions.csv  sdkconfig.defaults
components/codepilot_core/: CMakeLists.txt  protocol.c  serial_input.c  state_manager.c  ws_server.c
components/codepilot_core/include/: protocol.h  serial_input.h  state_manager.h  ws_server.h
components/xiaozhi_core/: CMakeLists.txt  idf_component.yml
components/xiaozhi_core/include/: xiaozhi_bridge.h
components/xiaozhi_core/src/: audio_pipeline.cc  audio_pipeline.h  button_handler.cc  button_handler.h  config.h  opus_codec.cc  opus_codec.h  ota_client.cc  ota_client.h  ws_client.cc  ws_client.h  xiaozhi_bridge.cc
docs/: dev_esp32_rlcd.md  esp32_rlcd_calendar_prd.md  single_key_navigation.md  test_cases.md
main/: CMakeLists.txt  Kconfig.projbuild  app_framework.h  app_manager.c  app_manager.h  app_registry.c  battery.c  battery.h  caldav.c  caldav.h  calendar.c  calendar.h  calendar_app.c  calendar_app.h  codepilot_app.c  codepilot_app.h  hello_world_main.c  hzk16.c  hzk16.h  keyboard.c  keyboard.h  kincal_bridge.c  kincal_bridge.h  kincal_client.c  kincal_client.h  lunar.c  lunar.h  menu_app.c  menu_app.h  placeholder_app.c  placeholder_app.h  shtc3.c  shtc3.h  snake_app.c  snake_app.h  st7306.c  st7306.h  tetris_app.c  tetris_app.h  tower_defense_app.c  (+13 more)
tools/: gen_utf8_gb2312.py
